--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Portfolio Template">
-    <meta name="keywords" content="Personal,Portfolio Template">
-    <meta name="author" content="ixTheme">
+    <meta name="description" content="Portfolio">
+    <meta name="keywords" content="Personal,Portfolio ">
+    <meta name="author" content="">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
