--- a/journal-details.html
+++ b/journal-details.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Digital Agency and Portfolio Template">
-    <meta name="keywords" content="Digital Agency, Agency, Business, Portfolio, Personal, Creative, Html Template, Portfolio Template">
-    <meta name="author" content="ixTheme">
+    <meta name="description" content="Portfolio ">
+    <meta name="keywords" content="Portfolio">
+    <meta name="author" content="">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -197,7 +197,7 @@
             <div class="container">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-lg-4 col-md-6 order-md-first order-sm-last order-last">
-                        <p class="copyright__text">&copy; 2019 <a class="hbrable" href="#0">ixTheme</a> All Rights Reserved.</p>
+                        <p class="copyright__text">&copy; 2019 <a class="hbrable" href="#0">Neamoth</a> All Rights Reserved.</p>
                     </div>
                     <div class="col-lg-4 col-md-6 order-md-last order-sm-first order-first">
                         <div class="social__links">
