--- a/journal.html
+++ b/journal.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Portfolio Template">
-    <meta name="keywords" content="Personal,Portfolio Template">
+    <meta name="description" content="Portfolio ">
+    <meta name="keywords" content="Personal,Portfolio ">
     <meta name="author" content="Neamoth's Portfolio">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
