--- a/contact.html
+++ b/contact.html
@@ -147,8 +147,8 @@
 
                                             <!-- contact info -->
                                             <div class="direct__contact_info">
-                                                <p>contact@yoursite.com</p>
-                                                <p>+1 234 567 8902</p>
+                                                <p>contact@softnsm.com</p>
+                                                <p>01789400417</p>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
